Changed Gateway Zuluu for Spring Cloud Gateway because it was deprecated

--- a/CryptoCurrencyApp/src/main/resources/application.yml
+++ b/CryptoCurrencyApp/src/main/resources/application.yml
@@ -3,13 +3,11 @@ server:
 
 spring:
   application:
-    name: CryptoCurrencyApp
+    name: cryptocurrency
 
 eureka:
-  instante:
-    prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://localhost:8081/eureka
+      defaultZone: http://localhost:8081/eureka/
     fetch-registry: true
     register-with-eureka: true
