--- a/discovery/src/main/resources/application.yml
+++ b/discovery/src/main/resources/application.yml
@@ -6,7 +6,8 @@ server:
 
 eureka:
   client:
+    preferIpAdress: true
     register-with-eureka: false
     fetch-registry: false
     service-url:
-      defaultZone: http://localhost:8081/eureka
+      defaultZone: http://localhost:8081/eureka/
