--- a/CryptoCurrencyApp/pom.xml
+++ b/CryptoCurrencyApp/pom.xml
@@ -16,9 +16,14 @@
 
 	<dependencies>
 
-
-
-
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
